--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
 	<meta charset="utf-8" />
 	<title>fb-Untracker extension</title>
+	<style>
+	body {
+		background-color: #efefef;
+		color: #373738;
+		font-family: "Segoe UI", Segoe, sans-serif;
+	}
+	.download {
+		margin-left: 2em;
+	}
+	.download h1 {
+		font-size: 200%;
+	}
+	.download a {
+		font-size: 150%;
+		font-weight: bold;
+	}
+	a {
+		color: #542323;
+		text-decoration: none;
+		-webkit-transition: color 0.2s linear;
+		-moz-transition: color 0.2s linear;
+		-o-transition: color 0.2s linear;
+		-ms-transition: color 0.2s linear;
+		transition: color 0.2s linear;
+	}
+	a:hover {
+		color: #983535;
+	}
+	</style>
 </head>
 <body>
-	<h1>fb-Untracker</h1>
-	<p><a href="http://github.com/tobias104/fb-untracker/raw/extension/fb-untracker.crx">Download</a>.</p>
+	<section class="download">
+		<h1>fb-Untracker</h1>
+		<p><a href="http://github.com/tobias104/fb-untracker/raw/extension/fb-untracker.crx">Download</a>.</p>
+	</section>
 </body>
 </html>
