--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 	<section class="download">
 		<h1>fb-Untracker</h1>
-		<p><a href="http://github.com/tobias104/fb-untracker/raw/extension/fb-untracker.crx">Download</a>.</p>
+		<p><a href="http://github.com/tobias104/fb-untracker/raw/extension/fb-untracker.crx">Download</a> (v1.3)</p>
 	</section>
 </body>
 </html>
