Moar font stack.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	body {
 		background-color: #efefef;
 		color: #373738;
-		font-family: "Segoe UI", Segoe, sans-serif;
+		font-family: "Segoe UI", Segoe, Rosario, Calibri, Helvetica, sans-serif;
 	}
 	.download {
 		margin-left: 2em;
