--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		color: #373738;
 		font-family: "Segoe UI", Segoe, Rosario, Calibri, Helvetica, sans-serif;
 	}
+	p {
+		margin: 0;
+	}
 	.download {
 		margin-left: 2em;
 	}
@@ -36,6 +39,7 @@
 <body>
 	<section class="download">
 		<h1>fb-Untracker</h1>
+		<p>Removes the outgoing facebook tracking links on facebook pages.</p>
 		<p><a href="http://github.com/tobias104/fb-untracker/raw/extension/fb-untracker.crx">Download</a> (v1.3)</p>
 	</section>
 </body>
