--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 	<section class="download">
 		<h1>fb-Untracker</h1>
-		<p>Removes the outgoing facebook tracking links on facebook pages.</p>
+		<p>Removes the outgoing Facebook tracking links on facebook pages.</p>
 		<p><a href="http://github.com/tobias104/fb-untracker/raw/extension/fb-untracker.crx">Download</a> (v1.4)</p>
 	</section>
 </body>
